Trying to fix text wrap on About Me page

--- a/style.css
+++ b/style.css
@@ -299,13 +299,11 @@ height: 350px;
  float: left;
  clear: left;
  margin-left: 4%;
- margin-right: 3%;
  margin-bottom: 3%;
 }
 
 #aboutTextBody {
   margin-left: 3%;
-  float: right;
   line-height: 1.3;
 }
 
